<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill"></string>
    <string name="network_toast">This app requires an internet connection</string>
    <string name="no_internet_connection">No Internet Connection Please Connect to the Internet</string>
    <string name="no_stocks_available">No Stocks Available, Please Add Stocks by clicking on +</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="stock_quotes">Stock Quotes</string>
    <string name="graph_content_description">Graph showing prices of the stock over time!</string>

    <string name="no_data_show">Can\'t show you data over time!</string>
    <string name="retry">RETRY</string>
    <string name="empty_view_text">Stocks Data not available!</string>
    <string name="data_error_json">Looks like it\'s our fault!</string>
    <string name="data_no_internet">Internet Connection is required!</string>
    <string name="data_error_parse">Unprecedented errors have happened!</string>
    <string name="data_unknown_error">Can\'t identify the problem here!</string>
    <string name="data_server_down">The Yahoo! Server is not responding properly!</string>
    <string name="data_no_error">No errors!</string>

    <string name="invalid_stock_symbol">Invalid Stock Symbol</string>
    <string name="stock_already_saved">This stock is already saved!</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="stock_name">Stock Name</string>
    <string name="exchange_name">Exchange Name</string>
    <string name="first_trade">First Trade</string>
    <string name="last_trade">Last Trade</string>
    <string name="currency">Currency</string>
    <string name="bid_price">Bid Price</string>

    <string name="loading_stock_data">Loading Stock Data...</string>
    <string name="symbol_details" translatable="false" formatted="true">%s Details</string>
    <string name="last_12month_comparision">Last 12 months stock comparision</string>
</resources>
